[gd_scene load_steps=4 format=2]

[ext_resource path="res://3D/Levels/Props/Nodes/Platform_2x2.tscn" type="PackedScene" id=1]
[ext_resource path="res://3D/Ennemies/Turret/Nodes/Turret.tscn" type="PackedScene" id=2]
[ext_resource path="res://3D/Levels/Level 5/Right Room.gd" type="Script" id=3]

[node name="Right Room" instance=ExtResource( 1 )]
transform = Transform( 8, 0, 0, 0, 1, 0, 0, 0, 8, 0.00406575, -2.38419e-07, -0.00222111 )
script = ExtResource( 3 )

[node name="Turret" parent="." index="1" instance=ExtResource( 2 )]
transform = Transform( 0.25, 0, 0, 0, 2.5, 0, 0, 0, 0.25, 0, -0.5, 0 )
fire_rate = 2.0
bullet_speed = 2.0

[node name="Turret2" parent="." index="2" instance=ExtResource( 2 )]
transform = Transform( 0.25, 0, 0, 0, 2.5, 0, 0, 0, 0.25, 0, -0.5, 0 )
fire_rate = 0.25
bullet_speed = 0.5

[node name="Turret3" parent="." index="3" instance=ExtResource( 2 )]
transform = Transform( -0.25, 0, -3.7749e-08, 0, 2.5, 0, 3.7749e-08, 0, -0.25, 0, -0.5, 0 )
fire_rate = 0.25
bullet_speed = 0.5

[node name="Platform_2x3" parent="." index="4" instance=ExtResource( 1 )]
transform = Transform( 0.125, 0, 0, 0, -1, 8.74228e-08, 0, -1.09278e-08, -0.125, 0, 6, 0 )

[node name="Turret" parent="Platform_2x3" index="1" instance=ExtResource( 2 )]

[node name="Platform_2x4" parent="." index="5" instance=ExtResource( 1 )]
transform = Transform( 0.125, 0, 0, 0, -1, 8.74228e-08, 0, -1.09278e-08, -0.125, 0, 6, 0.5 )

[node name="Turret" parent="Platform_2x4" index="1" instance=ExtResource( 2 )]

[node name="Platform_2x5" parent="." index="6" instance=ExtResource( 1 )]
transform = Transform( 0.125, 0, 0, 0, -1, 8.74228e-08, 0, -1.09278e-08, -0.125, 0.5, 6, 3.20142e-10 )

[node name="Turret" parent="Platform_2x5" index="1" instance=ExtResource( 2 )]

[node name="Platform_2x6" parent="." index="7" instance=ExtResource( 1 )]
transform = Transform( 0.125, 0, 0, 0, -1, 8.74228e-08, 0, -1.09278e-08, -0.125, 0.5, 6, 0.5 )

[node name="Turret" parent="Platform_2x6" index="1" instance=ExtResource( 2 )]

[node name="Platform_2x7" parent="." index="8" instance=ExtResource( 1 )]
transform = Transform( 0.125, 0, 0, 0, -1, 8.74228e-08, 0, -1.09278e-08, -0.125, -0.5, 6, 0.5 )

[node name="Turret" parent="Platform_2x7" index="1" instance=ExtResource( 2 )]

[node name="Platform_2x8" parent="." index="9" instance=ExtResource( 1 )]
transform = Transform( 0.125, 0, 0, 0, -1, 8.74228e-08, 0, -1.09278e-08, -0.125, -0.5, 6, 3.20142e-10 )

[node name="Turret" parent="Platform_2x8" index="1" instance=ExtResource( 2 )]

[node name="Platform_2x9" parent="." index="10" instance=ExtResource( 1 )]
transform = Transform( 0.125, 0, 0, 0, -1, 8.74228e-08, 0, -1.09278e-08, -0.125, -0.5, 6, -0.5 )

[node name="Turret" parent="Platform_2x9" index="1" instance=ExtResource( 2 )]

[node name="Platform_2x10" parent="." index="11" instance=ExtResource( 1 )]
transform = Transform( 0.125, 0, 0, 0, -1, 8.74228e-08, 0, -1.09278e-08, -0.125, 2.32831e-10, 6, -0.5 )

[node name="Turret" parent="Platform_2x10" index="1" instance=ExtResource( 2 )]

[node name="Platform_2x11" parent="." index="12" instance=ExtResource( 1 )]
transform = Transform( 0.125, 0, 0, 0, -1, 8.74228e-08, 0, -1.09278e-08, -0.125, 0.5, 6, -0.5 )

[node name="Turret" parent="Platform_2x11" index="1" instance=ExtResource( 2 )]
